--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eskild",
+  "name": "zahnferien",
   "version": "1.0.0",
-  "description": "My doozie Nuxt.js project",
-  "author": "Aleksej",
+  "description": "Zahnferien in Stettin, Polen",
+  "author": "Aleksej Dix",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -11,7 +11,6 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
