--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,9 +14,20 @@ collections:
     format: 'json'
     sort: "date:desc" # Default is title:asc
     fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime", format: "dddd MMMM Do, YYYY"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
+      - label: "Title"
+        name: "title"
+        widget: "string"
+
+      - label: "Publish Date"
+        name: "date"
+        widget: "datetime"
+        format: "dddd MMMM Do, YYYY"
+
+      - label: "Featured Image"
+        name: "thumbnail"
+        widget: "image"
+        required: false
+
       - label: "Category"
         name: "category"
         widget: "relation"
@@ -25,7 +36,35 @@ collections:
         valueField: "title"
         displayFields: ["title"]
         required: false
-      - {label: "Content", name: "body", widget: "markdown"}
+
+      - label: "Content"
+        name: "body"
+        widget: "markdown"
+
+  - name: "page" # Used in routes, e.g., /admin/collections/blog
+    label: "Pages" # Used in the UI
+    folder: "content/pages/page" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    format: 'json'
+    fields: # The fields for each document, usually in front matter
+      - label: "Title"
+        name: "title"
+        widget: "string"
+
+      - label: "Publish Date"
+        name: "date"
+        widget: "datetime"
+
+      - label: "Featured Image"
+        name: "thumbnail"
+        widget: "image"
+        required: false
+
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
+
   - label: "Pages"
     name: "pages"
     files:
