--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,9 +41,9 @@ collections:
         name: "body"
         widget: "markdown"
 
-  - name: "page" # Used in routes, e.g., /admin/collections/blog
-    label: "Pages" # Used in the UI
-    folder: "content/pages/page" # The path to the folder where the documents are stored
+  - name: "service" # Used in routes, e.g., /admin/collections/blog
+    label: "Services" # Used in the UI
+    folder: "content/services/service" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     format: 'json'
